--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
 body {
   background-image : url("http://coloriagefree.site/wp-content/uploads/2018/09/super-saiyan-4-goku-wallpaper-group-76-destine-sangoku-super-saiyan-4.jpg");
 }
+ p {
+   text-align : center;
+   font-family : Times New Roman;
+}
