--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image : url("https://cdn.wallpapersafari.com/95/26/v8Mu6Z.jpg");
+  background-color : turquoise;
 }
 h1 {
   text-align : center;
