--- a/style.css
+++ b/style.css
@@ -6,18 +6,10 @@ h1 {
   font-family : Arial;
   font-size : 60px;
   color : blue;
+  text-decoration: overline;
 }
 
-.zoom div img {
-	-webkit-transform: scale(1);
-	transform: scale(1);
-	-webkit-transition: .3s ease-in-out;
-	transition: .3s ease-in-out;
-}
-.zoom div:hover img {
-	-webkit-transform: scale(1.3);
-	transform: scale(1.3);
-}
+
  p {
    text-align : justify;
    font-family : Times New Roman;
