--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
-  background-color : turquoise;
+  background-image: url("https://cdn.wallpapersafari.com/95/26/v8Mu6Z.jpg");
+  background-repeat: no-repeat;;
 }
 h1 {
   text-align : center;
