--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body {
-  background-image: url("https://cdn.wallpapersafari.com/95/26/v8Mu6Z.jpg");
-  background-repeat: no-repeat;;
+  background-image : url("https://wallpapercave.com/wp/B6q0ZWS.jpg");
+  background-repeat : repeat-y;
 }
+
 h1 {
   text-align : center;
   font-family : Arial;
