--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image : url("https://wallpapercave.com/wp/B6q0ZWS.jpg");
+  background-image : url("https://wallpapercave.com/wp/qJqp2su.jpg");
   background-repeat : repeat-y;
 }
 
