--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ h2 {
   text-align : center;
   font-family : Arial;
   font-size : 50px;
-  font-style : italic
+  font-style : italic;
   color : yellow;
   text-decoration : underline;
 }
@@ -33,7 +33,7 @@ h3 {
 pre {
   text-align : justify;
   font-family : Times New Roman;
-  font-size : 25px
+  font-size : 25px;
   color : red;
   line-height : 1.5;
 }
