--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ pre {
   text-align : justify;
   font-family : Times New Roman;
   font-size : 20px;
-  color : red;
+  color : white;
   line-height : 1.2;
 }
 
@@ -42,6 +42,6 @@ p {
   text-align : justify;
   font-family : Times New Roman;
   font-size : 20px;
-  color : red;
+  color : white;
   line-height : 1.2;
 }
