--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body {
-  background-image : url("https://wallpapercave.com/wp/qJqp2su.jpg");
-  background-repeat : repeat-y;
+  background-color : turquoise;
 }
 
 h1 {
@@ -34,7 +33,7 @@ pre {
   text-align : justify;
   font-family : Times New Roman;
   font-size : 20px;
-  color : white;
+  color : black;
   line-height : 1.2;
 }
 
@@ -42,6 +41,6 @@ p {
   text-align : justify;
   font-family : Times New Roman;
   font-size : 20px;
-  color : white;
+  color : black;
   line-height : 1.2;
 }
