--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ pre {
   text-align : justify;
   font-family : Times New Roman;
   font-size : 40px;
-  color : black;
+  color : red;
   line-height : 1.2;
 }
 
